<resources>
    <string name="app_name">Jumbler</string>
    <string name="app_preference_file_key">com.example.jumbler.PREFERENCE_FILE_KEY</string>
    <string name="cancel">Cancel</string>
    <string name="loading">Loading…</string>
    <string name="dictionary_error">Word dictionary currently unavailable. Please connect to the Internet and restart the app to continue.</string>
    <string name="generic_error">An error has occurred. Please try again.</string>

    <!-- Login -->
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="log_in_button">Sign In</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="create_account">Create an account</string>
    <string name="offline_mode">Offline Mode</string>
    <string name="incorrect_login_snackbar">Failed to log in. Please check your credentials and try again.</string>
    <string name="no_internet_login_snackbar">Failed to log in. Please connect to the Internet and try again.</string>

    <!-- Account Creation -->
    <string name="username">Username</string>
    <string name="create_account_header">Create Account</string>
    <string name="create_account_button">Create Account</string>

    <string name="empty_email">Please enter an email address.</string>
    <string name="invalid_email">Please provide a valid email address.</string>
    <string name="empty_username">Please enter a username.</string>
    <string name="empty_password">Please enter a password.</string>
    <string name="invalid_password">Please enter a password that contains at least 6 alphanumeric characters.</string>

    <string name="verify_email_snackbar">Welcome to Jumbler! Open the link sent to your email to verify your account.</string>
    <string name="email_taken">This email address is already in use. Please log in with your existing account, or create a new account with a different email address.</string>
    <string name="username_taken">This username is already taken. Please choose a different one.</string>
    <string name="new_account_success">An account has been successfully created. Open the link sent to your email to verify your account.</string>
    <string name="new_account_fail">Failed to create an account. Please try again.</string>
    <string name="new_account_no_internet">Failed to create an account. Please connect to the Internet and try again.</string>

    <!-- Menu -->
    <string name="start_game">Start Game</string>
    <string name="practice_game">Practice Game</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="settings_button">Settings</string>
    <string name="return_to_login">Return to Login</string>
    <string name="offline_mode_notice">High scores are not saved in Offline Mode. In order to view your scores, create or log in to an account once connected to the Internet.</string>

    <!-- Game -->
    <string name="enter_word">Enter unscrambled word</string>
    <string name="correct_answer">Correct!</string>
    <string name="incorrect_answer">The word was "%1$s."</string>
    <string name="game_over_text">The word was "%1$s. Game over!"</string>

    <string name="score_placeholder">Score: 0</string>
    <string name="score">Score: %1$d</string>
    <string name="high_score">High score!</string>

    <string name="attempts_placeholder">3 attempts remaining</string>
    <string name="attempts_remaining">%1$d attempts remaining</string>
    <string name="attempt_remaining">%1$d attempt remaining</string>

    <string name="skip_word">Skip Word</string>
    <string name="hint">Hint</string>
    <string name="restart_keep_trying">Keep trying! You\'re not done yet.</string>
    <string name="restart_game">Restart Game</string>
    <string name="end_game">End Game</string>

    <!-- Leaderboard -->
    <string name="personal_leaderboard">Personal</string>
    <string name="global_leaderboard">Global</string>
    <string name="leaderboard_empty">Start playing to record your scores!</string>
    <string name="leaderboard_error">Failed to retrieve leaderboard scores. Please try again later.</string>
    <string name="leaderboard_offline">Please connect to the Internet to view the leaderboard.</string>

    <!-- Settings -->
    <string name="settings">Settings</string>
    <string name="welcome_user">Welcome, %1$s.</string>
    <string name="appearance">Appearance: </string>
    <string-array name="display_modes">
        <item>Use system setting</item>
        <item>Light mode</item>
        <item>Dark mode</item>
    </string-array>
    <string name="sign_out">Sign Out</string>
    <string name="delete_account">Delete Account</string>
    <string name="delete_account_warning">Are you sure you want to delete your account? All leaderboard scores will be permanently lost.</string>
    <string name="delete_account_no_internet">Failed to delete your account. Please connect to the Internet and try again.</string>
    <string name="return_to_menu">Return to Menu</string>

    <!-- Reset Password -->
    <string name="reset_password">Reset Password</string>
    <string name="reset_password_button">Send link</string>
    <string name="reset_password_desc">A link will be sent to your email address, allowing you to reset your account password. If you do not see the email, please check your junk or spam folders.</string>
    <string name="reset_password_empty_email">Please enter your email address to reset your password.</string>
    <string name="reset_password_check_email">Open the link sent to your email to reset your password.</string>
    <string name="reset_password_error">No accounts with this email address currently exist. Please check your credentials and try again.</string>
    <string name="reset_password_no_internet">Failed to reset your password. Please connect to the Internet and try again.</string>
</resources>